name:               jacob
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable jacob
  main-is:          site.hs
  ghc-options:      -threaded
  default-language: Haskell2010
  build-depends:    amazonka
                  , amazonka-core
                  , amazonka-s3
                  , base
                  , hakyll
                  , lens
                  , optparse-applicative
